# RustGameEngine

./: .gitignore  Cargo.toml  README.md  build.ps1  build.rs  components.list  config.toml
editor/: button.toml  editor.toml  pane.toml  scene_pane.toml
editor/button/: Cargo.toml  button.rs  button.toml  text.toml
editor/button/macros/: Cargo.toml
editor/button/src/: lib.rs  prelude.rs
editor/new_button/src/: lib.rs  prelude.rs
resources/entity/: Cargo.toml  __CHANGE_ME_ENTITY_NAME__.toml
resources/entity/macros/src/: lib.rs
resources/entity/src/: .gitignore  lib.rs  prelude.rs
resources/prefab/: guardian.toml
resources/scenes/: scene.toml
shaders/: fragment_circle_shader.glsl  fragment_color_shader.glsl  fragment_rect_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
src/: cli.rs  config.rs  frame.rs  main.rs
src/engine/: camera.rs  loader.rs  mod.rs  object.rs  prelude.rs  time.rs
src/engine/components/: mod.rs  rigidbody.rs  script.rs  sprite.rs  transform.rs
src/engine/math/: curve.rs  matrix2x2.rs  mod.rs  vector2.rs
src/engine/systems/: mod.rs  physics.rs
