[package]
authors = ["Olivier Lemoine <olivier@le-moine.fr>"]
edition = "2018"
name = "main"
version = "0.1.0"

[dependencies]
glium = "0.27.0"
image = "0.23.8"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# glium = "0.26"
# image = "0.23"

# [dependencies.rusttype]
# version =  "0.8"
# features = ["gpu_cache"]

# # [dependencies.engine]
# # path = "./engine"

# [dependencies.core]
# path = "./core"
