[package]
authors = ["Olivier Lemoine <olivier@le-moine.fr>"]
edition = "2018"
name = "rust_game_engine"
version = "0.1.0"

[dependencies]
glium = "0.26.0"
image = "0.23.8"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
libloading = "0.6"
clap = "3.0.0-beta.1"
Inflector = "*"
glium_text_rusttype = "0.3.3"
