[package]
name = "entity"
version = "0.1.0"
authors = ["OlivierLEMOINE"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
